--- a/RecipeSharingPlatform.Web/Views/Shared/_Layout.cshtml
+++ b/RecipeSharingPlatform.Web/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,13 +13,14 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
 </head>
+
 <body class="d-flex flex-column min-vh-100">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
                 @if (User?.Identity?.IsAuthenticated ?? false)
                 {
-                    <a class="navbar-brand" asp-controller="Recipe" asp-action="Index">
+                    <a class="navbar-brand" asp-controller="Home" asp-action="Index">
                         <i class="fas fa-utensils"></i> RecipeSharing
                         <span class="visually-hidden">(current)</span>
                     </a>
@@ -31,7 +33,8 @@
                     </a>
                 }
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
+                    aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarColor01">
@@ -53,7 +56,8 @@
                         @if (User?.Identity?.IsAuthenticated ?? false)
                         {
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Recipes</a>
+                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                                    aria-haspopup="true" aria-expanded="false">Recipes</a>
                                 <div class="dropdown-menu">
                                     <a class="dropdown-item" asp-controller="Recipe" asp-action="Index">
                                         <i class="fas fa-list"></i> All Recipes
@@ -73,7 +77,8 @@
                         else
                         {
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                                    aria-haspopup="true" aria-expanded="false">
                                     <i class="fas fa-list"></i> Recipes
                                 </a>
                                 <div class="dropdown-menu">
@@ -114,4 +119,5 @@
     <script src="~/js/footer-quotes.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+
 </html>
